kubernetes/apps/network/envoy-gateway/brauni-eu/envoy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.brauni.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-brauni-eu-public
  annotations:
    gatus.home-operations.com/endpoint: |-
      headers:
        Authorization: Basic ${GATUS_TINYAUTH_BASIC_AUTH}
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: public
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "10.10.8.14"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: brauni-eu-tls
---
# yaml-language-server: $schema=https://kubernetes-schemas.brauni.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect-brauni-eu
spec:
  parentRefs:
    - name: envoy-brauni-eu-public
      namespace: network
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
